Improved style | Sass variables | mobile

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,4 +1,24 @@
+
+// FONTS
 $font-stack: Helvetica, sans-serif;
-$back-color: #333;
+$titlesfont:'Rowdies', cursive;
+
+// Primary Colors
 $primary-font-color:white;
 $background-color: rgb(0, 0, 0);
+
+// GENRE COLORS
+$genreActionColor:#047CAE;
+$genreHorrorColor:#F01A24;
+$genreAdventureColor:#F57C21;
+$genreComedyColor:#04AE29;
+$genreSciFiColor:#B31F8F;
+$genreKidsColor:#FFA4D5;
+$genreRomanticColor:#FFD976;
+//GENRE FORMS
+$genreRadius:25px;
+$genreTextAlign:center;
+$genreTextTransform:uppercase;
+
+// Nav
+$navcolor:#F5C518;
