--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Nunito);
+@import url(https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400&family=Rowdies:wght@300;400;700&display=swap);
 @charset "UTF-8";
 /*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
@@ -10267,7 +10268,7 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
-main {
+.main {
   font: 100% Helvetica, sans-serif;
   color: white;
   background-color: rgb(0, 0, 0);
@@ -10282,6 +10283,118 @@ main {
   z-index: 2;
 }
 
-.logo-welcome {
-  z-index: 1;
+body {
+  margin: 0%;
+  background: rgb(0, 0, 0);
+}
+
+.logo-container {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo {
+  max-width: 100%;
+  padding: 3rem;
+}
+
+.fullscreen-video {
+  position: fixed;
+  overflow: hidden;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  transform: translateX(-50%) translateY(-50%);
+  z-index: -10;
+}
+
+.ncolor {
+  background-color: #F5C518;
+}
+
+.estructura {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.h1_main {
+  color: white;
+  font-family: "Rowdies", cursive;
+  text-transform: uppercase;
+  padding-left: 1rem;
+  padding-top: 1.5rem;
+}
+
+.catalogo {
+  margin: 1rem;
+  display: inline-block;
+}
+
+.img_catalogo {
+  max-width: -webkit-fit-content;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  max-height: 28vh;
+}
+
+.txt_catalogo {
+  color: white;
+}
+
+.star {
+  margin: 0.2rem;
+  height: 0.8rem;
+  width: 0.8rem;
+}
+
+.genre-action {
+  background-color: #047CAE;
+  border-radius: 25px;
+  text-align: center;
+  font-family: "Rowdies", cursive;
+  color: white;
+  text-transform: uppercase;
+}
+
+.genre-horror {
+  background-color: #F01A24;
+  border-radius: 25px;
+  text-align: center;
+  font-family: "Rowdies", cursive;
+  color: white;
+  text-transform: uppercase;
+}
+
+.genre-adventure {
+  background-color: #F57C21;
+  border-radius: 25px;
+  text-align: center;
+  font-family: "Rowdies", cursive;
+  color: white;
+  text-transform: uppercase;
+}
+
+.genre-comedy {
+  background-color: #F57C21;
+  border-radius: 25px;
+  text-align: center;
+  font-family: "Rowdies", cursive;
+  color: white;
+  text-transform: uppercase;
+}
+
+.genre-scifi {
+  background-color: #F57C21;
+  border-radius: 25px;
+  text-align: center;
+  font-family: "Rowdies", cursive;
+  color: white;
+  text-transform: uppercase;
 }
