--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10344,8 +10344,17 @@ body {
   max-height: 28vh;
 }
 
+.img_catalogo img :hover {
+  background: url("/public/img/vhs_the.png") no-repeat;
+  max-width: -webkit-fit-content;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  max-height: 28vh;
+}
+
 .txt_catalogo {
   color: white;
+  font-size: 5vw;
 }
 
 .star {
@@ -10361,6 +10370,9 @@ body {
   font-family: "Rowdies", cursive;
   color: white;
   text-transform: uppercase;
+  font-size: 4vw;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .genre-horror {
@@ -10370,6 +10382,9 @@ body {
   font-family: "Rowdies", cursive;
   color: white;
   text-transform: uppercase;
+  font-size: 4vw;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .genre-adventure {
@@ -10379,6 +10394,9 @@ body {
   font-family: "Rowdies", cursive;
   color: white;
   text-transform: uppercase;
+  font-size: 4vw;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .genre-comedy {
@@ -10388,6 +10406,9 @@ body {
   font-family: "Rowdies", cursive;
   color: white;
   text-transform: uppercase;
+  font-size: 4vw;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .genre-scifi {
@@ -10397,4 +10418,27 @@ body {
   font-family: "Rowdies", cursive;
   color: white;
   text-transform: uppercase;
+  font-size: 4vw;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.details_section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.h1_details {
+  color: white;
+  font-family: "Rowdies", cursive;
+  text-transform: uppercase;
+  padding-top: 1.5rem;
+  font-size: 10vw;
+  text-align: center;
+}
+
+.img_details {
+  max-width: 100vw;
+  padding: 0.8rem;
 }
