--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -74,8 +74,16 @@ body {
     max-width: fit-content;
     max-height: 28vh;
 }
+.img_catalogo img :hover{
+    background: url("/public/img/vhs_the.png") no-repeat;
+    max-width: fit-content;
+    max-height: 28vh;
+
+}
+
 .txt_catalogo{
     color: $primary-font-color;
+    font-size: $textCatalogFontSize;
 }
 .star{
     margin: 0.2rem;
@@ -92,6 +100,11 @@ body {
     font-family:$titlesfont;
     color: $primary-font-color;
     text-transform: $genreTextTransform;
+    // max-width: $genreWidth;
+    // margin: $genreMargin;
+    font-size: $genreTextSize;
+    padding-left: $genrePaddingLeft;
+    padding-right: $genrePaddingRight;
 }
 .genre-horror{
     background-color: $genreHorrorColor;
@@ -100,6 +113,12 @@ body {
     font-family:$titlesfont;
     color: $primary-font-color;
     text-transform: $genreTextTransform;
+    // max-width: $genreWidth;
+    // margin: $genreMargin;
+    font-size: $genreTextSize;
+    padding-left: $genrePaddingLeft;
+    padding-right: $genrePaddingRight;
+
 }
 .genre-adventure{
     background-color: $genreAdventureColor;
@@ -108,6 +127,12 @@ body {
     font-family:$titlesfont;
     color: $primary-font-color;
     text-transform: $genreTextTransform;
+    // max-width: $genreWidth;
+    // margin: $genreMargin;
+    font-size: $genreTextSize;
+    padding-left: $genrePaddingLeft;
+    padding-right: $genrePaddingRight;
+
 }
 .genre-comedy{
     background-color: $genreAdventureColor;
@@ -116,6 +141,12 @@ body {
     font-family:$titlesfont;
     color: $primary-font-color;
     text-transform: $genreTextTransform;
+    // max-width: $genreWidth;
+    // margin: $genreMargin;
+    font-size: $genreTextSize;
+    padding-left: $genrePaddingLeft;
+    padding-right: $genrePaddingRight;
+
 }
 .genre-scifi{
     background-color: $genreAdventureColor;
@@ -124,4 +155,28 @@ body {
     font-family:$titlesfont;
     color: $primary-font-color;
     text-transform: $genreTextTransform;
+    // max-width: $genreWidth;
+    // margin: $genreMargin;
+    font-size: $genreTextSize;
+    padding-left: $genrePaddingLeft;
+    padding-right: $genrePaddingRight;
+
+}
+//DETAILS DETAILS DETAILS 
+.details_section{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.h1_details{
+    color:$primary-font-color;
+    font-family:$titlesfont;
+    text-transform: uppercase;	
+    padding-top: 1.5rem;
+    font-size: $detailTitle;
+    text-align: $detailTitleAlign;
+}
+.img_details{
+    max-width: 100vw;
+    padding: 0.8rem;
 }
