Mobile design almost done | more efficient

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10352,7 +10352,7 @@ body {
   max-height: 28vh;
 }
 
-.txt_catalogo, .description_details {
+.txt_catalogo, .ul_comments, .description_details {
   color: white;
   font-size: 5vw;
 }
@@ -10392,6 +10392,10 @@ body {
   background-color: #F57C21;
 }
 
+.sbutton {
+  margin-top: 0.5rem;
+}
+
 .details_section {
   display: flex;
   flex-wrap: wrap;
@@ -10421,4 +10425,24 @@ body {
 .description_details {
   text-align: center;
   padding: 0.5rem;
+}
+
+.description_title_form {
+  color: #F5C518;
+  text-align: center;
+}
+
+.ul_comments {
+  margin-left: 2rem;
+  margin-right: 2rem;
+  text-align: left;
+}
+
+ul {
+  list-style: none;
+}
+
+li::before {
+  content: "•";
+  color: #F5C518; /* or whatever color you prefer */
 }
