--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10428,3 +10428,15 @@ body {
   text-align: center;
   padding: 0.5rem;
 }
+
+/* On screens that are 992px wide or less, the background color is blue */
+@media screen and (min-width: 992px) {
+  body {
+    background-color: blue;
+  }
+}
+@media screen and (min-width: 600px) and (max-width: 991px) {
+  body {
+    background-color: olive;
+  }
+}
