Updated SASS Styles and add img

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10391,11 +10391,11 @@ body {
 }
 
 .genre-comedy {
-  background-color: #F57C21;
+  background-color: #04AE29;
 }
 
 .genre-scifi {
-  background-color: #F57C21;
+  background-color: #B31F8F;
 }
 
 .sbutton {
